added test page for sdk

--- a/backend/public/docs.html
+++ b/backend/public/docs.html
@@ -57,7 +57,7 @@
   </ul>
 
   <h2>Auth Endpoints (<a id="openapi-link" href="/openapi.json">OpenAPI</a>)</h2>
-  <p style="color: var(--muted); margin-top: -0.25rem;">Prefer the interactive explorer? Open <a href="/swagger.html">Swagger UI</a>. Need a client? Load <code>/sdk.js</code> as an ES module: <code>import { createClient } from "/sdk.js"; const api = createClient({ baseUrl: location.origin });</code>.</p>
+  <p style="color: var(--muted); margin-top: -0.25rem;">Prefer the interactive explorer? Open <a href="/swagger.html">Swagger UI</a>. Need a client? Load <code>/sdk.js</code> as an ES module: <code>import { createClient } from "/sdk.js"; const api = createClient({ baseUrl: location.origin });</code>. Want a quick demo? See <a href="/sdk-test.html">/sdk-test.html</a> (same-origin so cookies work).</p>
   <table>
     <thead>
       <tr><th>Method</th><th>Path</th><th>Description</th></tr>
